<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zzx.camera.view.preference.RecordSettingPreference
        android:key="@string/key_record_auto"
        android:title="@string/record_auto"
        android:summary="@string/close"
        android:defaultValue="@string/close_value"
        android:layout="@layout/record_set"
        android:persistent="true"
        android:entries="@array/record_setting_open_close"
        android:entryValues="@array/record_setting_open_close_value"/>
    <com.zzx.camera.view.preference.RecordSettingPreference
        android:key="@string/key_record_section"
        android:summary="@string/ten_min"
        android:defaultValue="10"
        android:title="@string/record_section"
        android:layout="@layout/record_set"
        android:persistent="true"
        android:entries="@array/record_section_setting"
        android:entryValues="@array/record_section_setting_value"/>
    <com.zzx.camera.view.preference.RecordSettingPreference
        android:key="@string/key_record_pre"
        android:title="@string/record_pre"
        android:summary="@string/close"
        android:defaultValue="0"
        android:layout="@layout/record_set"
        android:persistent="true"
        android:entries="@array/record_pre_delay_setting"
        android:entryValues="@array/record_pre_delay_setting_value"/>
    <com.zzx.camera.view.preference.RecordSettingPreference
        android:key="@string/key_record_delay"
        android:summary="@string/close"
        android:defaultValue="0"
        android:title="@string/record_delay"
        android:layout="@layout/record_set"
        android:persistent="true"
        android:entries="@array/record_pre_delay_setting"
        android:entryValues="@array/record_pre_delay_setting_value"/>
    <com.zzx.camera.view.preference.RecordSettingPreference
        android:key="@string/key_record_quality"
        android:summary="@string/quality_low"
        android:defaultValue="0"
        android:title="@string/record_quality"
        android:layout="@layout/record_set"
        android:persistent="true"
        android:entries="@array/record_quality"
        android:entryValues="@array/record_quality_value"/>
    <!--<com.android.police.view.RecordSettingPreference
        android:key="record_loop"
        android:summary="@string/close"
        android:defaultValue="@string/close_value"
        android:title="@string/record_circle"
        android:layout="@layout/preference_screen_item_layout"
        android:persistent="true"
        android:entries="@array/record_setting_open_close"
        android:entryValues="@array/record_setting_open_close_value"/>-->
</PreferenceScreen>