<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zzx="http://schemas.android.com/apk/res-auto">
    <com.zzx.camera.view.preference.CaptureSettingPreference
        android:key="@string/key_mode_picture"
        android:title="@string/mode_single"
        android:defaultValue="0"
        android:layout="@layout/capture_set"
        android:persistent="true"
        zzx:icon_entries="@array/record_setting"
        android:entries="@array/photo_signal"
        android:entryValues="@array/photo_signal_value"/>
    <com.zzx.camera.view.preference.CaptureSettingPreference
        android:key="@string/key_mode_continuous"
        android:defaultValue="10"
        android:title="@string/mode_continuous"
        android:layout="@layout/capture_set"
        android:persistent="true"
        zzx:icon_entries="@array/array_continuous_icon"
        android:entries="@array/array_continuous_mode"
        android:entryValues="@array/array_continuous_value"/>
    <com.zzx.camera.view.preference.CaptureSettingPreference
        android:key="@string/key_mode_interval"
        android:title="@string/mode_interval"
        android:defaultValue="5"
        android:layout="@layout/capture_set"
        android:persistent="true"
        zzx:icon_entries="@array/array_interval_mode_icon"
        android:entries="@array/array_interval_mode"
        android:entryValues="@array/array_interval_mode_value"/>
    <com.zzx.camera.view.preference.CaptureSettingPreference
        android:key="@string/key_mode_timer"
        android:defaultValue="5"
        android:title="@string/mode_timer"
        android:layout="@layout/capture_set"
        android:persistent="true"
        zzx:icon_entries="@array/array_timer_mode_icon"
        android:entries="@array/array_timer_mode"
        android:entryValues="@array/array_timer_mode_value"/>
</PreferenceScreen>